@@ -1,0 +1,150 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<GCompris>
+<Wordlist name="default-nl" description="Standaard Nederlands" locale="nl">
+<level value="1">
+vis
+de
+aap
+en
+koek
+of
+roos
+auto
+fiets
+maan
+straat
+zijn
+haar
+poes
+jas
+vlieg
+ui
+gaan
+huis
+louis
+sok
+ei
+pauw
+nat
+kijk
+hond
+eend
+koe
+boek
+letter
+rood
+groen
+blauw
+wit
+droog 
+</level>
+ 
+<level value="2">
+appel
+zee
+ekster
+zand
+ridder
+zon
+kasteel
+giraf
+berg
+rijden
+kapot
+muis
+olifant
+jongen
+vast
+leuk
+hoog
+vogel
+helpen
+boerderij
+computer
+muziek
+varken
+kleur
+reus
+goed
+droom
+school
+tomaat
+zwaar
+wolk
+spel
+trein
+</level>
+ 
+<level value="3">
+appel
+zee
+ekster
+zand
+ridder
+zon
+kasteel
+giraf
+berg
+rijden
+kapot
+muis
+olifant
+jongen
+vast
+leuk
+hoog
+vogel
+helpen
+boerderij
+computer
+muziek
+varken
+kleur
+reus
+goed
+droom
+school
+tomaat
+zwaar
+wolk
+spel
+trein
+vis
+de
+aap
+en
+koek
+of
+roos
+auto
+fiets
+maan
+straat
+zijn
+haar
+poes
+jas
+vlieg
+ui
+gaan
+huis
+louis
+sok
+ei
+pauw
+nat
+kijk
+hond
+eend
+koe
+boek
+letter
+rood
+groen
+blauw
+wit
+droog
+</level>
+</Wordlist>
+</GCompris>
+
