@@ -1,3 +1,8 @@
+2007-01-09  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* boards/wordsgame/default-nl.xml: created by lode leroy
+	* src/boards/menu2.c: fixed NULL printf (crashes on windows only)
+
 2007-01-03  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	A few typo reported by Clytie.
